--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run:
           name: helm-github-pages
           environment:
-            - GITHUB_PAGES_REPO: cetic/helm-charts
+            - GITHUB_PAGES_REPO: ashokkumar-ragu/helm
             - HELM_CHART: nifi
             - HELM_VERSION: 3.9.0
           command: wget -O - https://raw.githubusercontent.com/cetic/helm-chart-publisher/master/publish.sh | sh
