--- a/Chart.yaml
+++ b/Chart.yaml
@@ -14,17 +14,9 @@ source:
   - https://github.com/ashokkumar-ragu/helm
 maintainers:
   - name: banzo
-    email: sebastien.dupont@cetic.be
-    url: https://github.com/banzo
-  - name: AyadiAmen
-    email: amen.ayadi@cetic.be
-    url: https://github.com/AyadiAmen
-  - name: alexnuttinck
-    email: alexandre.nuttinck@cetic.be
-    url: https://github.com/alexnuttinck
-  - name: zakaria2905
-    email: zakaria.hajja@cetic.be
-    url: https://github.com/zakaria2905
+    email: ashok.kumarr@uniphore.com
+    url: https://github.com/ashokkumar-ragu
+
 dependencies:
   - name: zookeeper
     version: 9.2.7
